sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:16: error: ';' expected but integer literal found.
  	}fin-=1;
              ^AlgCocktailSort2:23: error: ';' expected but integer literal found.
  	}debut+=1;
                ^